--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
+<!doctype html>
 <html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Future Force Dashboard</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="public/style.css">
     </head>
     <body>
-        <h1 class="text-center">Future Force Dashboard</h1>
-        <div class="container-fluid">
+        <div class="vis-container container-fluid">
+            <h1 class="text-center">Future Force Dashboard</h1>
             <div id="bar-chart"></div>
             <div id="mixing-board"></div>
             <div class="row">
