--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <div id="mixing-board"></div>
             <div id="control-row" class="row">
                 <div class="col-xs-1"></div>
-                <div class="col-xs-8" id="mixer"></div>
+                <div class="col-xs-6" id="mixer"></div>
+                <div class="col-xs-1"></div>
                 <div class="col-xs-3" id="bar-chart-legend"></div>
                 <div class="col-xs-1"></div>
             </div>
