--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     </head>
     <body>
         <div class="vis-container container-fluid">
-            <h1 id="dashboard-heading" class="text-center">Future Force Dashboard</h1>
+            <div id="dashboard-heading" class="text-center">Future Force Dashboard</div>
             <div id="bar-chart"></div>
             <div id="mixing-board"></div>
             <div id="control-row" class="row">
-                <div class="col-xs-1"></div>
-                <div class="col-xs-6" id="mixer"></div>
-                <div class="col-xs-1"></div>
-                <div class="col-xs-3" id="bar-chart-legend"></div>
-                <div class="col-xs-1"></div>
+                <div class="hidden-xs col-md-1"></div>
+                <div class="col-xs-9 col-md-6" id="mixer"></div>
+                <div class="hidden-xs col-md-1"></div>
+                <div class="col-xs-3 col-md-3" id="bar-chart-legend"></div>
+                <div class="hidden-xs col-md-1"></div>
             </div>
         </div>
 
