--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         <div class="vis-container container-fluid">
             <div id="dashboard-heading" class="text-center">Future Force Dashboard</div>
             <!-- Div for the Legend on mobile phones -->
-            <div class="row hidden-sm hidden-md hidden-lg" id="bar-chart-legend-xs">
-                <div class="col-xs-12"></div>
-            </div>
+            <div class="row hidden-sm hidden-md hidden-lg" id="bar-chart-legend-xs"></div>
             <div id="bar-chart"></div>
             <div id="mixing-board"></div>
             <div id="control-row" class="row">
