Added more responsive features

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Future Force Dashboard</title>
+        <title>Budget Dashboard</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="public/style.css">
     </head>
     <body>
         <div class="vis-container container-fluid">
-            <div id="dashboard-heading" class="text-center">Future Force Dashboard</div>
+            <div id="dashboard-heading" class="text-center">Budget Dashboard</div>
             <!-- Div for the Legend on mobile phones -->
-            <div class="row hidden-sm hidden-md hidden-lg" id="bar-chart-legend-xs"></div>
+            <div class="hidden-lg hidden-md" id="bar-chart-legend-xs"></div>
             <div id="bar-chart"></div>
             <div id="mixing-board"></div>
             <div id="control-row" class="row">
-                <div class="hidden-xs col-sm-1"></div>
-                <div class="col-xs-12 col-sm-6" id="mixer"></div>
-                <div class="hidden-xs col-sm-1"></div>
-                <div class="hidden-xs col-sm-3" id="bar-chart-legend"></div>
-                <div class="hidden-xs col-sm-1"></div>
+                <div class="hidden-xs hidden-sm hidden-md col-lg-1"></div>
+                <div class="col-xs-12 col-md-10 col-lg-7" id="mixer"></div>
+                <div class="hidden-xs hidden-sm hidden-md col-lg-1"></div>
+                <div class="hidden-xs hidden-sm col-md-2 col-lg-2" id="bar-chart-legend"></div>
+                <div class="hidden-xs hidden-sm hidden-md col-lg-1"></div>
             </div>
         </div>
 
